feat: 完成系统功能优化和重构，包括存储迁移、监控完善、搜索服务增强等